@@ -1,101 +1,3 @@
-// // package com.metrolog.backend.config;
-
-// // import org.springframework.context.annotation.Bean;
-// // import org.springframework.context.annotation.Configuration;
-// // import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-// // import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-// // import org.springframework.security.config.http.SessionCreationPolicy;
-// // import org.springframework.security.web.SecurityFilterChain;
-// // import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-
-// // @Configuration
-// // @EnableWebSecurity
-// // public class SecurityConfig {
-
-// //     private final JwtFilter jwtFilter;
-
-// //     public SecurityConfig(JwtFilter jwtFilter) {
-// //         this.jwtFilter = jwtFilter;
-// //     }
-
-// //     @Bean
-// //     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-// //         http
-// //                 .csrf(csrf -> csrf.disable())
-// //                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-// //                 .authorizeHttpRequests(auth -> auth
-// //                         .requestMatchers("/api/auth/**").permitAll()
-// //                         .anyRequest().authenticated())
-// //                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
-
-// //         return http.build();
-// //     }
-// // }
-
-
-
-
-// package com.metrolog.backend.config;
-
-// import org.springframework.context.annotation.Bean;
-// import org.springframework.context.annotation.Configuration;
-// import org.springframework.security.authentication.AuthenticationManager;
-// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-// import org.springframework.security.config.http.SessionCreationPolicy;
-// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-// import org.springframework.security.crypto.password.PasswordEncoder;
-// import org.springframework.security.web.SecurityFilterChain;
-// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-
-// @Configuration
-// @EnableWebSecurity
-// public class SecurityConfig {
-
-//     private final JwtFilter jwtFilter;
-
-//     public SecurityConfig(JwtFilter jwtFilter) {
-//         this.jwtFilter = jwtFilter;
-//     }
-
-//     @Bean
-//     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//         http
-//                 .csrf(csrf -> csrf.disable())
-//                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-//                 .authorizeHttpRequests(auth -> auth
-//                         .requestMatchers("/api/auth/**").permitAll()
-//                         .anyRequest().authenticated());
-
-//         http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
-
-//         return http.build();
-//     }
-
-
-//     @Bean
-//     public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration)
-//             throws Exception {
-//         return authenticationConfiguration.getAuthenticationManager();
-//     }
-// }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 package com.metrolog.backend.config;
 
 import org.springframework.context.annotation.Bean;
@@ -111,7 +13,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
@@ -131,7 +33,6 @@ public class SecurityConfig {
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/products/**", "/api/inspections/**").authenticated()
                         .anyRequest().authenticated());
 
         http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
@@ -140,20 +41,19 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration)
-            throws Exception {
-        return authenticationConfiguration.getAuthenticationManager();
-    }
-
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration)
+            throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
     }
 }
